--- a/index.html
+++ b/index.html
@@ -373,51 +373,25 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
     </div>
   </div>
 </section>
-<section class="access" id="access">
+
+    <section class="access" id="access">
   <div class="access__container">
     <header class="access__head">
-      <h2 class="access__title">
-        <span class="access__bar" aria-hidden="true"></span>
-        Access Our Pricing & Support
-      </h2>
+      <h2 class="access__title">Contact support</h2>
       <p class="access__sub">
-        Pricing, availability, and support are centralized for a simple and fast experience.
+        Reach out directly for order help, availability questions, or documentation requests.
       </p>
     </header>
 
-    <div class="access__grid">
-      <!-- Card 1: Pricing -->
-      <article class="access-card access-card--featured">
-        <div class="access-card__badge" aria-label="Most popular">Most popular</div>
-
-        <div class="access-card__top">
-          <div class="access-card__icon" aria-hidden="true">📄</div>
-          <h3 class="access-card__title">Peptide pricing list</h3>
-        </div>
-
-        <p class="access-card__desc">
-          View our current products with up-to-date pricing, availability, formats, and conditions.
-        </p>
-
-        <div class="access-card__actions">
-          <a class="access-btn access-btn--primary" href="./assets/pricinglist.pdf" target="_blank" rel="noopener">
-            View pricing list
-          </a>
-          <a class="access-btn" href="./assets/pricinglist.pdf" target="_blank" rel="noopener">
-            Download PDF
-          </a>
-        </div>
-      </article>
-
-      <!-- Card 2: Contact -->
-      <article class="access-card">
+    <div class="access__grid access__grid--single">
+      <article class="access-card access-card--contact">
         <div class="access-card__top">
           <div class="access-card__icon" aria-hidden="true">🎯</div>
-          <h3 class="access-card__title">Contact support</h3>
+          <h3 class="access-card__title">Direct contact</h3>
         </div>
 
         <p class="access-card__desc">
-          Reach out directly for order help, availability questions, or batch documentation requests.
+          Fast answers, no runaround. Message us and we’ll help with product questions, shipping, or COA requests.
         </p>
 
         <div class="access-card__actions access-card__actions--stack">
@@ -425,21 +399,19 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
             ✉️ Email support
           </a>
 
-          <!-- Optional: if you use SMS/text -->
-          <a
-  class="access-btn access-btn--green"
-  href="sms:+13146861973?&body=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides."
-  target="_blank"
-  rel="noopener"
->
-  Message Us on WhatsApp
-</a>
+          <!-- Replace with your WhatsApp click-to-chat link -->
+          <a class="access-btn access-btn--green" href="sms:+13146861973?&body=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides."" target="_blank" rel="noopener">
+            💬 Message us on WhatsApp
+          </a>
         </div>
+
+        <p class="access-card__fineprint">
+          Hours: Mon–Fri • Typical response: under 24h
+        </p>
       </article>
     </div>
   </div>
 </section>
-
     
     <!-- FAQ + Email -->
     <section class="section" id="faq">
