--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
     <section class="access" id="access">
   <div class="access__container">
     <header class="access__head">
-      <h2 class="access__title">Contact support</h2>
+      <h2 class="access__title">Contact Support</h2>
       <p class="access__sub">
         Reach out directly for order help, availability questions, or documentation requests.
       </p>
