--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
   </span>
 </a>
       <nav class="nav-links" aria-label="Primary">
-        <a href="#shop">Shop</a>
-        <a href="#different">Why us</a>
-        <a href="#faq">FAQ</a>
+  <a href="#shop" data-nav>Shop</a>
+  <a href="#focus" data-nav>Focus Areas</a>
+  <a href="#lab" data-nav>Lab Results</a>
+  <a href="#why" data-nav>Why Us</a>
+  <a href="#faq" data-nav>FAQ</a>
+  <a href="#access" data-nav>Contact</a>
       </nav>
 
       <div class="nav-actions">
-        <a class="btn ghost" href="#shop">Browse</a>
-        <a class="btn primary" href="#shop">Shop now</a>
+        <a class="btn ghost" href="#access">Contact</a>
+        <a class="btn primary" href="#shop">Shop Now</a>
       </div>
     </div>
   </header>
