--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Forge Labs — Fitness-Focused Research Supply</title>
+  <title>Forge Labs — Research Supply</title>
   <meta name="description" content="Fitness-focused research supply with transparent policies and a streamlined kit that includes essentials." />
+  <link rel="icon" href="./assets/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
