--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@ Forge Labs exists for people who care about their health and performance — but
             <div class="stat-top">
               <div>
                 <div class="stat-label">Checkout</div>
-                <div class="stat-value">PayPal Buy Now</div>
+                <div class="stat-value">Secure Buy Now</div>
               </div>
               <span class="pill mini">GitHub hosted</span>
             </div>
             <div class="bar" aria-hidden="true"><div style="--w:74%"></div></div>
-            <p class="note">Simple, fast, and built for a static site. You’ll receive payment + shipping details in PayPal.</p>
+            <p class="note">Simple, fast, and built for a static site. You’ll receive payment + shipping details at checkout.</p>
           </div>
 
           <div class="stat">
@@ -167,7 +167,7 @@ Forge Labs exists for people who care about their health and performance — but
                 <input type="hidden" name="no_note" value="1">
                 <input type="hidden" name="bn" value="PP-BuyNowBF">
 
-                <button type="submit" class="btn primary full">Buy Now with PayPal</button>
+                <button type="submit" class="btn primary full">Buy Kit Now</button>
                 <p class="fineprint">Shipping fees may vary at checkout.</p>
               </form>
             </div>
@@ -439,7 +439,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 
   <details class="faq">
     <summary>How does checkout work?</summary>
-    <p>Checkout is handled via PayPal. After purchase, you’ll receive a PayPal confirmation with shipping details and your receipt.</p>
+    <p>Checkout is handled via PayPal or Bitcoin. After purchase, you’ll receive a confirmation with shipping details and your receipt.</p>
   </details>
 
   <details class="faq">
@@ -508,7 +508,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 
       <div class="footer-bottom">
         <div>© <span id="year"></span> Forge Labs</div>
-        <div class="small muted">Hosted on GitHub Pages • PayPal checkout</div>
+        <div class="small muted">Hosted on GitHub Pages • Secure checkout</div>
       </div>
     </div>
   </footer>
