--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Forge Labs exists for people who care about their health and performance — but
             <div class="stat-top">
               <div>
                 <div class="stat-label">Checkout</div>
-                <div class="stat-value">Secure Buy Now</div>
+                <div class="stat-value">PayPal or Crypto Buy Now</div>
               </div>
               <span class="pill mini">GitHub hosted</span>
             </div>
@@ -439,7 +439,7 @@ Peptides commonly researched for skin integrity, tissue repair, and recovery sup
 
   <details class="faq">
     <summary>How does checkout work?</summary>
-    <p>Checkout is handled via PayPal or Bitcoin. After purchase, you’ll receive a confirmation with shipping details and your receipt.</p>
+    <p>Checkout is handled via PayPal or Crypto. After purchase, you’ll receive a confirmation with shipping details and your receipt.</p>
   </details>
 
   <details class="faq">
