--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Forge Labs exists for people who care about their health and performance — but
               </div>
 
               <p class="product-desc">
-                Full kit built for disciplined, performance-minded customers who value simplicity and consistency.
+                A product built for disciplined, performance-minded customers who value simplicity and consistency.
               </p>
 
               <ul class="chips" aria-label="Highlights">
@@ -145,6 +145,19 @@ Forge Labs exists for people who care about their health and performance — but
                 <li class="chip">Discreet packaging</li>
                 <li class="chip">Fast processing</li>
               </ul>
+
+              <!-- Variant selector (generic) -->
+<div class="variant-row" style="margin: 12px 0 14px;">
+  <label for="retaVariant" class="muted small" style="display:block; margin-bottom:6px;">
+    Choose size
+  </label>
+
+  <select id="retaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
+    <option value="optA" data-price="120.00" data-sku="FL-RT-A" data-label="Option A">Option A</option>
+    <option value="optB" data-price="200.00" data-sku="FL-RT-B" data-label="Option B">Option B</option>
+    <option value="optC" data-price="275.00" data-sku="FL-RT-C" data-label="Option C">Option C</option>
+  </select>
+</div>
 
               <!-- PayPal Buy Now Button (static-site friendly) -->
               <form
@@ -188,7 +201,7 @@ Forge Labs exists for people who care about their health and performance — but
                 <div class="price muted">$—</div>
               </div>
               <p class="product-desc muted">
-                Listed for early visibility. Subscribe below for launch access.
+                Listed for early visibility. Email or message us below for launch access.
               </p>
               <ul class="chips" aria-label="Highlights">
                 <li class="chip">Includes essentials</li>
@@ -213,7 +226,7 @@ Forge Labs exists for people who care about their health and performance — but
                 <div class="price muted">$—</div>
               </div>
               <p class="product-desc muted">
-                Placeholder for your next SKU. Keep it listed, keep it compliant.
+                Listed for early visibility. Email or message us below for launch access.
               </p>
               <ul class="chips" aria-label="Highlights">
                 <li class="chip">Includes essentials</li>
