--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Forge Labs exists for people who care about their health and performance — but
                 <input type="hidden" name="no_note" value="1">
                 <input type="hidden" name="bn" value="PP-BuyNowBF">
 
-                <button type="submit" class="btn primary full">Buy Kit Now</button>
+                <button type="submit" class="btn primary full">Buy Now</button>
                 <p class="fineprint">Shipping fees may vary at checkout.</p>
               </form>
             </div>
