--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ Forge Labs exists for people who care about their health and performance — but
   </label>
 
   <select id="retaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-    <option value="optA" data-price="120.00" data-sku="FL-RT-A" data-label="Option A">Option A</option>
-    <option value="optB" data-price="200.00" data-sku="FL-RT-B" data-label="Option B">Option B</option>
-    <option value="optC" data-price="275.00" data-sku="FL-RT-C" data-label="Option C">Option C</option>
+    <option value="optA" data-price="120.00" data-sku="FL-RT-A" data-label="Option A">10mg</option>
+    <option value="optB" data-price="200.00" data-sku="FL-RT-B" data-label="Option B">20mg</option>
+    <option value="optC" data-price="275.00" data-sku="FL-RT-C" data-label="Option C">30mg</option>
   </select>
 </div>
 
