--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Forge Labs exists for people who care about their health and performance — but
             <div class="product-body">
               <div class="product-top">
                 <div>
-                  <h3>Retatrutide (10mg)</h3>
+                 <h3 class="product-title" id="retaTitle">Retatrutide</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
                 <div class="price" id="retaPriceDisplay">$120.00</div>
