--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Forge Labs exists for people who care about their health and performance — but
                  <h3 class="product-title" id="retaTitle">Retatrutide</h3>
                   <p class="muted small">Research product • Includes essentials</p>
                 </div>
-                <div class="price" id="retaPriceDisplay">$120.00</div>
+                <div class="product-price" id="retaPriceDisplay">$120.00</div>
               </div>
 
               <p class="product-desc">
