--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@ Forge Labs exists for people who care about their health and performance — but
     Choose size
   </label>
 
-  <select id="retaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-    <option value="optA" data-price="120.00" data-sku="FL-RT-A" data-label="Option A">10mg</option>
-    <option value="optB" data-price="200.00" data-sku="FL-RT-B" data-label="Option B">20mg</option>
-    <option value="optC" data-price="275.00" data-sku="FL-RT-C" data-label="Option C">30mg</option>
-  </select>
+<select id="retaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
+  <option value="optA" data-price="120.00" data-sku="FL-RT-A" data-label="10mg">10mg</option>
+  <option value="optB" data-price="200.00" data-sku="FL-RT-B" data-label="20mg">20mg</option>
+  <option value="optC" data-price="275.00" data-sku="FL-RT-C" data-label="30mg">30mg</option>
+</select>
 </div>
 
               <!-- PayPal Buy Now Button (static-site friendly) -->
