--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@ Forge Labs exists for people who care about their health and performance — but
                 <input type="hidden" name="currency_code" value="USD">
 
                 <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
-                <input type="hidden" name="item_number" value="FL-RT">
-                <input type="hidden" name="custom" value="Includes essentials">
-                <input type="hidden" name="amount" value="120.00">
+                <input type="hidden" name="item_number" id="ppItemNumber" value="FL-RT-A">
+                <input type="hidden" name="custom" id="ppCustom" value="Size: 10mg">
+                <input type="hidden" name="amount" id="ppAmount" value="120.00">
                 <input type="hidden" name="shipping" value="4.95">
                 <input type="hidden" name="quantity" value="1">
 
