--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Forge Labs exists for people who care about their health and performance — but
           <h3 class="focus-card__title">Metabolic &amp; GLP-1</h3>
         </div>
         <p class="focus-card__desc">
-          Peptides that act on appetite, blood sugar and weight management, with a responsible approach.
+          Peptides studied in laboratory research related to metabolic signaling pathways.
         </p>
         <div class="focus-card__chips" aria-label="Examples">
           <span class="chip">Semaglutide</span>
@@ -276,7 +276,7 @@ Forge Labs exists for people who care about their health and performance — but
           <h3 class="focus-card__title">Skin &amp; Recovery</h3>
         </div>
         <p class="focus-card__desc">
-Peptides commonly researched for skin integrity, tissue repair, and recovery support — often explored in aesthetic, wellness, and performance-adjacent research contexts.
+Peptides investigated in laboratory settings for cellular signaling and structural protein interactions.
         </p>
         <div class="focus-card__chips" aria-label="Examples">
           <span class="chip">GHK-Cu</span>
