--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="nav-actions">
         <a class="btn ghost" href="#access">Contact</a>
-        <a class="btn primary" href="#shop">Shop Now</a>
+        <a class="btn primary" href="#shop">View Research Catalog</a>
       </div>
     </div>
   </header>
@@ -46,14 +46,13 @@
         <div class="hero-card hero-left">
           <div class="pill"><span class="dot"></span> Clear policies • Fast processing • Discreet packaging</div>
 
-          <h1>Built for people who’ve done the work — and still feel stuck.</h1>
+          <h1>Research-Grade Peptides for Laboratory Study</h1>
           <p class="sub">
-You train. You eat clean. You’ve tried cutting, tracking, “dialing it in,” and starting over more times than you can count.
-Forge Labs exists for people who care about their health and performance — but are tired of spinning their wheels.
+Providing peptides intended exclusively for in vitro and laboratory research applications.
           </p>
 
           <div class="cta-row">
-            <a class="btn primary" href="#shop">Shop Retatrutide</a>
+            <a class="btn primary" href="#shop">Shop Products</a>
             <a class="btn" href="#different">Why we're different</a>
           </div>
 
@@ -131,13 +130,13 @@ Forge Labs exists for people who care about their health and performance — but
               <div class="product-top">
                 <div>
                  <h3 class="product-title" id="retaTitle">Retatrutide</h3>
-                  <p class="muted small">Research product • Includes essentials</p>
+                  <p class="muted small">Research use only • Laboratory supply</p>
                 </div>
                 <div class="product-price" id="retaPriceDisplay">$120.00</div>
               </div>
 
               <p class="product-desc">
-                A product built for disciplined, performance-minded customers who value simplicity and consistency.
+                This product is supplied strictly for research and laboratory use only. It is intended for qualified research personnel conducting controlled laboratory studies.
               </p>
 
               <ul class="chips" aria-label="Highlights">
@@ -301,7 +300,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
         What Makes Forge Labs Different
       </h2>
       <p class="why__sub">
-        Built on consistency, transparent sourcing documentation, and responsive support.
+        Forge Labs supplies peptides intended exclusively for laboratory research purposes. Our focus is on providing properly identified, analytically tested compounds for controlled research environments.
       </p>
     </header>
 
@@ -341,8 +340,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
         <h2 class="lab__title"><span class="lab__bar" aria-hidden="true"></span>Lab Tests &amp; Quality Assurance</h2>
 
         <p class="lab__sub">
-          Every batch is accompanied by supplier-provided laboratory documentation to support identity and purity
-          checks prior to release.
+          Independent analytical testing is provided for identification and purity verification. Certificates of Analysis are supplied for research reference purposes only.
         </p>
 
         <ul class="lab__list">
@@ -511,8 +509,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
         </div>
 
         <div class="footer-note">
-          <strong>Disclaimer:</strong> Products sold on this website are intended for <strong>research and laboratory use only</strong>.
-          Not for human consumption. No medical claims are made or implied.
+          <strong>Disclaimer:</strong> All products sold on this website are intended strictly for <strong>research and laboratory use only.</strong> Products are not intended for human or animal consumption, diagnosis, treatment, or medical use.
         </div>
       </div>
       <div class="footer-contact">
