--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
         </div>
 
         <div class="lab-card__meta">
-          <div><span class="lab-card__metaLabel">Batch:</span> FL-RETA-2025-11</div>
+          <div><span class="lab-card__metaLabel">Batch:</span> FL-BAC-2025-11</div>
           <div><span class="lab-card__metaLabel">Lab:</span> Supplier documentation</div>
         </div>
       </aside>
