--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Forge Labs — Research Supply</title>
-  <meta name="description" content="Fitness-focused research supply with transparent policies and a streamlined kit that includes essentials." />
+  <title>Forge Labs — Research-Grade Laboratory Supply/title>
+  <meta name="description" content="Research-Grade laboratory supply with transparent policies and a streamlined kit that includes essentials." />
   <link rel="icon" href="./assets/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
@@ -21,7 +21,7 @@
 
   <span class="brand-text">
     <span class="brand-name">Forge Labs</span>
-    <span class="brand-sub">Fitness-focused research supply</span>
+    <span class="brand-sub">Research-Grade Laboratory Supply</span>
   </span>
 </a>
       <nav class="nav-links" aria-label="Primary">
