--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Forge Labs — Research-Grade Laboratory Supply/title>
+  <title>Forge Labs — Research-Grade Laboratory Supply</title>
   <meta name="description" content="Research-Grade laboratory supply with transparent policies and a streamlined kit that includes essentials." />
   <link rel="icon" href="./assets/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="assets/css/styles.css" />
+  <script src="./main.js" defer></script>
 </head>
 <body>
   <!-- Sticky Nav -->
