--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
           </a>
 
           <!-- Replace with your WhatsApp click-to-chat link -->
-          <a class="access-btn access-btn--green" href="https://wa.me/13146861973?&body=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides."" target="_blank" rel="noopener">
+          <a class="access-btn access-btn--green" href="https://wa.me/13146861973?&body=Hi%20there!%20I%20have%20a%20question%20about%20your%20peptides." target="_blank" rel="noopener">
             💬 Message us on WhatsApp
           </a>
         </div>
