--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Research-Grade laboratory supply with transparent policies and a streamlined kit that includes essentials." />
   <link rel="icon" href="./assets/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="assets/css/styles.css" />
+  <meta name="trustpilot-one-time-domain-verification-id" content="32e775dc-7cac-47c9-81ff-4d67ed6fcf06"/>
 </head>
 <body>
   <!-- Sticky Nav -->
